--- a/wiki/WavePageName0.wiki
+++ b/wiki/WavePageName0.wiki
@@ -9,6 +9,17 @@ This project is under heavy development in it's most basic stage, but soon it wi
 
 Please have in mind that the web aspect of wave os is being worked on and changes on our website and this developer tool can happen often as we do our best to improve usefulness.
 
+If you're just a non techical person wich wants to know about wave, please forget this developer site and just use this one:
+
+http://sites.google.com/site/waveosproject
+
+You can find the actual iso at:
+
+http://rapidshare.com/files/2431867289/Wave03.iso
+
+That CD contains the source code, a copy of Discovering Wave pdf and
+the developer tools in a single package. The CD is bootable. Please make sure that your computer have old IDE hard drive, cd and you have
+backup of all your data before trying to install. Also you need a VESA 2.0 compatible video card, otherwise, the desktop doesn't start.
 
 = Details =
 
